--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@ and open the template in the editor.
             background: #6666ff;
             color: white;
             font-size:  x-large;
-            padding-left: 200px;
+            text-align:  center;
             
             
             width: 100%;
